Listing restrictions feature with allowlists

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,8 @@
       "resolveJsonModule": true,
       "strictNullChecks": false
     },
-    "include": ["./scripts", "./test", "typechain"],
+    "include": ["./scripts", "./test", "./typechain"],
     "files": [
-      "./hardhat.config.ts",
-      "node_modules/@nomiclabs/hardhat-ethers/src/type-extensions.d.ts",
-      "node_modules/@nomiclabs/hardhat-etherscan/src/type-extensions.d.ts",
-      "node_modules/@nomiclabs/hardhat-waffle/src/type-extensions.d.ts",
-      "node_modules/hardhat-typechain/src/type-extensions.d.ts"
+      "./hardhat.config.ts"
     ]
 }
