--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "hardhat": "^2.12.3",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.9",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.9",
     "solc": "^0.8.17",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
